Updating class, student and proffessor with relationships between them
